[jdk21] Add new javac annotation processor flag