@@ -714,6 +714,7 @@ public class Delombok {
 			}
 			
 			if (!disablePreview && Javac.getJavaCompilerVersion() >= 11) argsList.add("--enable-preview");
+			if (Javac.getJavaCompilerVersion() >= 21) argsList.add("-proc:full");
 			
 			if (Javac.getJavaCompilerVersion() < 15) {
 				String[] argv = argsList.toArray(new String[0]);
